# styled_text

./: AUTHORS  CHANGELOG.md  Cargo.toml  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
styled_text/: Cargo.toml  README.md
styled_text/src/: lib.rs  text_storage.rs
